// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Artist/Artist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-1u4ypdz"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: No album 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-1u4ypdz"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      />
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: Unknown 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          class="h-full w-full rounded-full hidden svelte-1u4ypdz"
          height="256"
          loading="lazy"
          width="256"
        />
         
        <span
          class="h-full w-full svelte-1u4ypdz rounded-full"
        >
          <i
            class="material-icons svelte-1u4ypdz"
          >
            person
          </i>
        </span>
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Unknown
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;
